personalSiteCSS.css
body {
  background-color: #d9d9d9;
}

.innerBox {
  background-color: #f2f2f2;
  width: 93%;
  margin:0 auto;
  margin-top: 2%;
  margin-bottom: 3%;
}

.name, .softwareEngineer {
  text-align: center;
}

.mainPicture {
   position: relative;
   width: 100%;
   bottom: 0px;
}

.mainPictureText {
   position: absolute;
   top: 35%;
   left: 55%;
   width: 40%;
   color: white;
   font-size: 2em;
   text-shadow: .06em .06em black;
}

.resume{
  width: 50%;
  margin-left: 25%;
  marign-right: 25%;
}

/*NAVBAR STYLING*/
.navBar {
  text-align: center;
  padding: 0;
}

.navBar li {
  position: relative;
  display: inline-block;
  margin-right: -4px;
  color: black;
}

.navBar a:link{
  display: block;
  text-decoration: none;
  background-color: #f7f7f7;
  background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#e7e7e7));
  background-image: -webkit-linear-gradient(top, #f7f7f7, #e7e7e7);
  background-image: -moz-linear-gradient(top, #f7f7f7, #e7e7e7);
  background-image: -ms-linear-gradient(top, #f7f7f7, #e7e7e7);
  background-image: -o-linear-gradient(top, #f7f7f7, #e7e7e7);
  color: #a7a7a7;
  margin: 36px;
  width: 144px;
  height: 144px;
  position: relative;
  text-align: center;
  line-height: 144px;
  border-radius: 50%;
  box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
  border: solid 1px transparent;
}

.navBar a:active {
  box-shadow: 0px 3px 4px #aaa inset, 0px 2px 3px #fff;
}

.navBar a:visited {
  color: black;
}

.navBar a:before {
  content: "";
  display: block;
  background: #fff;
  border-top: 2px solid #ddd;
  position: absolute;
  top: -18px;
  left: -18px;
  bottom: -18px;
  right: -18px;
  z-index: -1;
  border-radius: 50%;
  box-shadow: inset 0px 8px 48px #ddd;
}

.navBar a:hover {
  text-decoration: none;
  color: #555;
  background: #f5f5f5;
}

/*.navBar a:active {
  background-color: grey;
}*/

/*FADE INS*/

.animated {
-webkit-animation-fill-mode: both;
-moz-animation-fill-mode: both;
-ms-animation-fill-mode: both;
-o-animation-fill-mode: both;
animation-fill-mode: both;
-webkit-animation-duration: 1s;
-moz-animation-duration: 1s;
-ms-animation-duration: 1s;
-o-animation-duration: 1s;
animation-duration: 1s;
}

.fadeInDown {
-webkit-animation-name: fadeInDown;
-moz-animation-name: fadeInDown;
-o-animation-name: fadeInDown;
animation-name: fadeInDown;
}

.delay {
-webkit-animation-delay: 0.30s;
-moz-animation-delay: 0.30s;
-o-animation-delay: 0.30s;
animation-delay: 0.30s;
}

.delay-one {
-webkit-animation-delay: 1.5s;
-moz-animation-delay: 1.5s;
-o-animation-delay: 1.5s;
animation-delay: .4s;
}

.delay-two {
-webkit-animation-delay: 1.0s;
-moz-animation-delay: 1.0s;
-o-animation-delay: 1.0s;
animation-delay: 0.5s;
}

.delay-three {
-webkit-animation-delay: 0.60s;
-moz-animation-delay: 0.60s;
-o-animation-delay: 0.60s;
animation-delay: 0.60s;
}

.delay-four {
-webkit-animation-delay: 0.60s;
-moz-animation-delay: 0.60s;
-o-animation-delay: 0.60s;
animation-delay: 0.7s;
}

.delay-five {
-webkit-animation-delay: 0.60s;
-moz-animation-delay: 0.60s;
-o-animation-delay: 0.60s;
animation-delay: 0.80s;
}

@-webkit-keyframes fadeInDown {
0% {
opacity: 0;
-webkit-transform: translateY(-20px);
}

100% {
opacity: 1;
-webkit-transform: translateY(0);
}
}

